bpo-30003: Fix handling escape characters in HZ codec (#1720) (#1556)